--- a/Board.Infastructure/Board.Infastructure.csproj
+++ b/Board.Infastructure/Board.Infastructure.csproj
@@ -6,4 +6,10 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Identity\" />
+    <Folder Include="MapProfiles\" />
+    <Folder Include="Repository\" />
+  </ItemGroup>
+
 </Project>
