--- a/Board.Host.Api/Board.Host.Api.csproj
+++ b/Board.Host.Api/Board.Host.Api.csproj
@@ -7,7 +7,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="7.0.5" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Board.Application.AppData\Board.Application.AppData.csproj" />
+    <ProjectReference Include="..\Board.Infastructure\Board.Infastructure.csproj" />
+    <ProjectReference Include="..\Board.Infrastucture.DataAccess\Board.Infrastucture.DataAccess.csproj" />
   </ItemGroup>
 
 </Project>
