--- a/Board.Infastructure/Board.Infastructure.csproj
+++ b/Board.Infastructure/Board.Infastructure.csproj
@@ -8,8 +8,16 @@
 
   <ItemGroup>
     <Folder Include="Identity\" />
-    <Folder Include="MapProfiles\" />
-    <Folder Include="Repository\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Board.Contracts\Board.Contracts.csproj" />
+    <ProjectReference Include="..\Board.Domain\Board.Domain.csproj" />
   </ItemGroup>
 
 </Project>
