--- a/Board.Application.AppData/Board.Application.AppData.csproj
+++ b/Board.Application.AppData/Board.Application.AppData.csproj
@@ -8,19 +8,16 @@
 
   <ItemGroup>
     <Folder Include="Contexts\Categories\Repositories\" />
-    <Folder Include="Contexts\Categories\Services\" />
-    <Folder Include="Contexts\Comments\Repositories\" />
     <Folder Include="Contexts\Comments\Services\" />
-    <Folder Include="Contexts\Files\Repositories\" />
-    <Folder Include="Contexts\Files\Services\" />
     <Folder Include="Contexts\Messages\Repositories\" />
     <Folder Include="Contexts\Messages\Services\" />
-    <Folder Include="Contexts\Users\Repositories\" />
-    <Folder Include="Contexts\Users\Services\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="7.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.0" />
   </ItemGroup>
 
