--- a/Board.Infrastucture.DataAccess/Board.Infrastucture.DataAccess.csproj
+++ b/Board.Infrastucture.DataAccess/Board.Infrastucture.DataAccess.csproj
@@ -23,4 +23,9 @@
     <ProjectReference Include="..\Board.Infastructure\Board.Infastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contexts\Comments\" />
+    <Folder Include="Contexts\FavoriteAdverts\" />
+  </ItemGroup>
+
 </Project>
