--- a/Board.Host.Api/Board.Host.Api.csproj
+++ b/Board.Host.Api/Board.Host.Api.csproj
@@ -3,7 +3,12 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <ImplicitUsings>enable</ImplicitUsings>	
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
+  </PropertyGroup>
+
+  <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
+		<DocumentationFile>Documentation.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
