--- a/Board.Infastructure/Board.Infastructure.csproj
+++ b/Board.Infastructure/Board.Infastructure.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Board.Application.AppData\Board.Application.AppData.csproj" />
     <ProjectReference Include="..\Board.Contracts\Board.Contracts.csproj" />
     <ProjectReference Include="..\Board.Domain\Board.Domain.csproj" />
   </ItemGroup>
